<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/eOTP"
            android:textColor="@color/colorAccent"
            android:hint="@string/hint_enter_otp_received"
            android:textColorHint="@color/colorAccent"
            android:textCursorDrawable="@null"
            android:maxLength="4"/>
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:id="@+id/ePass1"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textCursorDrawable="@null"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_enter_new_password"/>
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:id="@+id/ePass2"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:textCursorDrawable="@null"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_reenter_new_password"/>
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bOTP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonBackgroundWhite"
            android:textColor="@color/buttonTextColorBlue"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/button_get_OTP"
            />
        <Button
            android:id="@+id/bConfirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonBackgroundWhite"
            android:textColor="@color/buttonTextColorBlue"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/button_confirm"
            />
        <Button
            android:id="@+id/bCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonBackgroundWhite"
            android:textColor="@color/buttonTextColorBlue"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/button_cancel"
            />
    </LinearLayout>

</LinearLayout>