<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tOrganisationZero"
        android:text="@string/textview_currently_you_are_part_of_zero_organisations"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:visibility="gone"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonLinearLayout"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bChangeOrganisation"
            android:background="@color/buttonBackgroundGreen"
            android:textColor="@color/buttonTextColorWhite"
            android:fontFamily="sans-serif"
            android:layout_margin="1dp"
            android:text="@string/button_change_organisation"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bLeaveOrganisation"
            android:background="@color/buttonBackgroundGreen"
            android:textColor="@color/buttonTextColorWhite"
            android:fontFamily="sans-serif"
            android:layout_margin="1dp"
            android:text="@string/button_Leave_organisation"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/organisationRecyclerView"
        android:layout_alignParentTop="true"
        android:fitsSystemWindows="true"
        android:layout_above="@id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"/>

</RelativeLayout>