<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/eCurrentPassword"
            android:inputType="textPassword"
            android:hint="@string/hint_current_password"
            android:maxLength="15"
            android:fontFamily="sans-serif"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="textPassword"
            android:id="@+id/eNewPassword"
            android:maxLength="15"
            android:hint="@string/hint_new_password"
            android:fontFamily="sans-serif"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="textPassword"
            android:maxLength="15"
            android:id="@+id/eConfirmNewPassword"
            android:hint="@string/hint_confirm_new_password"
            android:fontFamily="sans-serif"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>